updated path and added screenshot

--- a/index.html
+++ b/index.html
@@ -8,5 +8,25 @@
     <script defer src="app.js"></script>
     <title>Rock Paper Scissors</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1 class="heading">Rock🧱 Paper📜 Scissors✂️</h1>
+      <div class="score-board">
+        <p class="user">User</p>
+        <div class="scores">
+          <span class="user__score">0</span> :
+          <span class="computer__score">0</span>
+        </div>
+        <p class="computer">Comp</p>
+      </div>
+      <h3 class="message">Let's Play...</h3>
+      <div class="buttons__container">
+        <button class="btn" value="stone">✊</button>
+        <button class="btn" value="paper">🖐️</button>
+        <button class="btn" value="scissors">✌️</button>
+      </div>
+
+      <h4 class="make__move">Make your Move</h4>
+    </div>
+  </body>
 </html>
